--- a/Collectors/Resources/SharedResource.ru.resx
+++ b/Collectors/Resources/SharedResource.ru.resx
@@ -132,6 +132,9 @@
   <data name="Current password" xml:space="preserve">
     <value>Текущий пароль</value>
   </data>
+  <data name="d" xml:space="preserve">
+    <value />
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Удалить</value>
   </data>
