Added additional fields names in views

--- a/Collectors/Resources/Views/Collections/Edit.ru.resx
+++ b/Collectors/Resources/Views/Collections/Edit.ru.resx
@@ -127,7 +127,7 @@
     <value>Удалить изображение и закончить</value>
   </data>
   <data name="Editing your collection" xml:space="preserve">
-    <value>Изменить вашу коллекцию</value>
+    <value>Редактировать вашу коллекцию</value>
   </data>
   <data name="Finish" xml:space="preserve">
     <value>Закончить</value>
