--- a/Collectors/Resources/SharedResource.ru.resx
+++ b/Collectors/Resources/SharedResource.ru.resx
@@ -144,8 +144,14 @@
   <data name="Delete" xml:space="preserve">
     <value>Удалить</value>
   </data>
+  <data name="Discussion about item" xml:space="preserve">
+    <value>Обсуждение элемента</value>
+  </data>
   <data name="Download" xml:space="preserve">
     <value>Скачать</value>
+  </data>
+  <data name="Edit your item" xml:space="preserve">
+    <value>Редактировать элемент</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Эл. почта</value>
@@ -195,6 +201,9 @@
   <data name="Save" xml:space="preserve">
     <value>Сохранить</value>
   </data>
+  <data name="Sent" xml:space="preserve">
+    <value>Отправить</value>
+  </data>
   <data name="Tags" xml:space="preserve">
     <value>Тэги</value>
   </data>
@@ -206,5 +215,8 @@
   </data>
   <data name="write tags here" xml:space="preserve">
     <value>вводите тэги здесь</value>
+  </data>
+  <data name="Write your comment" xml:space="preserve">
+    <value>Добавьте ваш комментарий</value>
   </data>
 </root>
